force-app/main/default/objects/Case_Exit_Doc_Requirement__c/Case_Exit_Doc_Requirement__c.object-meta.xml
<CustomObject>
    <description>Configuration object mapping Case RecordType + Case Type to required exit Document Types. The Case_Exit_Doc_Checklist_Creation_Flow reads this at Case creation to auto-create Draft Document_Checklist__c records that must reach Final status before the Case can be closed.</description>
    <label>Case Exit Doc Requirement</label>
    <nameField>
        <displayFormat>CEDR-{0000}</displayFormat>
        <label>Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Exit Doc Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>