force-app/main/default/objects/Case_Exit_Doc_Requirement__c/fields/Doc_Category__c.field-meta.xml
<CustomField>
    <fullName>Doc_Category__c</fullName>
    <description>Document category to assign to the auto-created Document_Checklist__c record. Global-value-set-backed replacement for Document_Category__c.</description>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Category</valueSetName>
    </valueSet>
</CustomField>