force-app/main/default/objects/Case_Exit_Doc_Requirement__c/fields/Document_Label__c.field-meta.xml
<CustomField>
    <fullName>Document_Label__c</fullName>
    <description>Optional human-readable label for display in error messages or reports (e.g. &quot;Technical Scoping Form&quot;). Falls back to Document_Type__c if blank.</description>
    <label>Document Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>