force-app/main/default/objects/Case_Exit_Doc_Requirement__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Document type to assign to the auto-created Document_Checklist__c record, dependent on Document_Category__c.</description>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Document_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Document_Type</valueSetName>
    </valueSet>
</CustomField>