force-app/main/default/objects/Case_Exit_Doc_Requirement__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, this requirement is ignored at Case creation. Deactivate instead of deleting to preserve audit history.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>