force-app/main/default/objects/Case_Exit_Doc_Requirement__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Admin documentation — context for why this exit document is required for this Case Type.</description>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>