force-app/main/default/objects/Case_Exit_Doc_Requirement__c/listViews/All_Requirements.listView-meta.xml
<ListView>
    <fullName>All_Requirements</fullName>
    <columns>NAME</columns>
    <columns>Case_Record_Type_Dev_Name__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Document_Category__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Requirements</label>
</ListView>